# casl2-playground

./: .gitignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
casl2/: package-lock.json  package.json
casl2/src/: AssembleError.ts  assemble.test.ts  assembler.ts  hello.ts  machine.test.ts  machine.ts
casl2/src/assembler/: AssembleError.ts  assemble.test.ts  assembler.ts  types.ts
casl2/src/casl2/: parser.ts  procedureFactory.ts  (+2 more)
docs/: index.html
docs/js/: casl2interpriter.js  casl2interpriter.wasm  main.js
interpreter_webassembly/: CMakeLists.txt
interpreter_webassembly/frontend/: wasm_machine.js
interpreter_webassembly/src/: entry_point.cpp  flag_register.cpp  flag_register.hpp  inputfile  interpreter.cpp  main.cpp  memory.cpp  memory.hpp  register.cpp  register.hpp
lib/: package.json  tsconfig.json
src/: assemble.test.ts  assembler.ts  machine.test.ts  machine.ts
src/casl2/: parser.test.ts  parser.ts  procedureFactory.test.ts  procedureFactory.ts  tokenizer.test.ts  tokenizer.ts  types.ts
src/commet2/: memory.test.ts  parser.ts  procedureFactory.test.ts  procedureFactory.ts  register.ts  tokenizer.ts
src/infra/: memory.ts  register.test.ts  register.ts
wasm_interpreter/: CMakeLists.txt  build.sh
wasm_interpreter/frontend/: wasm_machine.js
wasm_interpreter/src/: entry_point.cpp  flag_register.cpp  flag_register.hpp  interpreter.cpp  main.cpp  memory.cpp  register.cpp  register.hpp
web/: .gitignore  package-lock.json  package.json  webpack.config.js
web/public/: index.html
web/src/: index.js
(+192 files in other folders)
